# mtuci-rs

./: Cargo.toml  draw.rs  game.rs  main.rs  main1.rs  snake.rs
homework1/: Cargo.toml
homework1/projects/branches/src/: main.rs
homework1/projects/functions/src/: main.rs
homework1/projects/guessing_game/src/: main.rs
homework1/projects/loops/src/: main.rs
homework1/projects/no_type_annotations/src/: main.rs
homework1/projects/ownerships/src/: main.rs
homework1/projects/variables/src/: main.rs
homework1/src/: branches.rs  fizzbuzz.rs  functions.rs  guessing_game.rs  loops.rs  variables.rs
homework2/: Cargo.toml
homework2/projects/enums/src/: main.rs
homework2/projects/rectangles/src/: main.rs
homework2/projects/restaurant/src/: lib.rs
homework2/projects/structs/src/: main.rs
homework2/src/: task1.rs  task2.rs
homework4/: Cargo.toml
homework4/src/: main.rs
homework5/: Cargo.toml
homework5/projects/adder/src/: lib.rs
homework5/projects/chapter10/src/: aggregator.rs  main.rs
homework5/projects/closure-example/src/: main.rs
homework5/projects/collections/src/: main.rs
homework5/projects/cons-list/src/: main.rs
homework5/projects/deref-example/src/: main.rs
homework5/projects/drop-example/src/: main.rs
homework5/projects/error-handling/src/: main.rs
homework5/projects/iterators/src/: main.rs
homework5/projects/limit-tracker/src/: lib.rs
homework5/projects/minigrep/src/: main.rs  minigrepCFG.rs
homework5/projects/panic/src/: main.rs
homework5/projects/restaurant/src/: front_of_house.rs
tokio-exercises/: Cargo.toml  main.rs
tokio-exercises/my-redis/src/: connection.rs
