[package]
name = "homework2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "structs"
path = "projects/structs/src/main.rs"

[[bin]]
name = "rectangles"
path = "projects/rectangles/src/main.rs"

[[bin]]
name = "enums"
path = "projects/enums/src/main.rs"

[[bin]]
name = "task1"
path = "src/task1.rs"

[[bin]]
name = "task2"
path = "src/task2.rs"

[dependencies]
